# registration-library

./: README.md  pyproject.toml
.github/workflows/: build.yml  ci-build.yml
src/registration_library/base/: colormapper.py  gdal.py
src/registration_library/datasets/: sentinel.py
src/registration_library/resources/: stac.py
tests/base/: test_download.py  test_file.py
